Update index.html and style.css
Update svg images and change color palette

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
     </div>
 
     <div class="image">
-        <img src="images/working.svg" class="drop-shadow" alt="">
+        <img src="images/lost_online.svg" class="drop-shadow" alt="">
     </div>
 
     <div class="custom-shape-divider-bottom-1630264813">
@@ -117,7 +117,7 @@
     </div>
     <div class="container">
         <div class="image">
-            <img src="images/data.svg" class="drop-shadow" alt="" loading="lazy">
+            <img src="images/data_trends.svg" alt="" loading="lazy">
         </div>
         <div class="content">
             <h3>A Perfect Solution For Your Business</h3>
@@ -436,7 +436,8 @@
             <h3>Contact Info</h3>
             <div class="info">
                 <i class="fas fa-phone"></i>
-                <p> +123-456-7890 <br> +111-2222-333 </p>
+                <p> 123-456-7890</p>
+                <p> 111-2222-333</p>
             </div>
             <div class="info">
                 <i class="fas fa-envelope"></i>
